crates/jarl/tests/integration/snapshots/integration__toml__toml_fixable_with_group.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: fixed_contents
---
anyNA(x)
anyDuplicated(x) > 0
length(levels(x))
