crates/jarl/tests/integration/snapshots/integration__toml__toml_fixable_with_select.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: fixed_contents
---
anyNA(x)
any(duplicated(x))
length(levels(x))
